--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>光陽メディアPOD Tシャツデザインシミュレータ</title>
+    <title>POD Tシャツデザインシミュレータ</title>
     <!-- Fabric.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
     <style>
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>光陽メディアPOD Tシャツデザインシミュレータ</h1>
+    <h1>POD Tシャツデザインシミュレータ</h1>
     <canvas id="tshirtCanvas" width="500" height="600"></canvas>
     <div class="controls">
         <input type="file" id="uploadImage" accept="image/*">
