--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,4 +1,3 @@
-<!-- confirm.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -8,7 +7,11 @@
 </head>
 <body>
     <h1>デザイン確認</h1>
-    <img src="{{ image_url }}" alt="デザイン画像" width="300">
+    {% if image_url %}
+        <img src="{{ image_url }}" alt="デザイン画像" width="300">
+    {% else %}
+        <p>デザイン画像がありません。</p>
+    {% endif %}
     <br>
     <button onclick="window.location.href='/'">戻る</button>
     <button onclick="window.location.href='/order'">注文する</button>
