--- a/templates/order.html
+++ b/templates/order.html
@@ -15,14 +15,23 @@
         <input type="radio" name="payment" value="銀行振込"> 銀行振込<br>
         <br>
         
-        <label>氏名:</label><br>
+        <label>団体名・組織名:</label><br>
+        <input type="text" name="dantainame" required><br>
+
+        <label>担当者名:</label><br>
         <input type="text" name="name" required><br><br>
         
+        <label>郵便番号:</label><br>
+        <input type="text" name="addressno" required><br>
+
         <label>住所:</label><br>
         <input type="text" name="address" required><br><br>
         
         <label>電話番号:</label><br>
-        <input type="text" name="phone" required><br><br>
+        <input type="text" name="phone" required><br>
+
+        <label>Eメール:</label><br>
+        <input type="text" name="email" required><br><br>
         
         <button type="submit">注文を確認</button>
     </form>
