--- a/templates/review.html
+++ b/templates/review.html
@@ -9,10 +9,13 @@
 <body>
     <h1>注文内容確認</h1>
     <p><strong>支払い方法:</strong> {{ payment }}</p>
-    <p><strong>氏名:</strong> {{ name }}</p>
+    <p><strong>団体名・組織名:</strong> {{ name }}</p>
+    <p><strong>担当者名:</strong> {{ name }}</p>
+    <p><strong>郵便番号:</strong> {{ addressno }}</p>
     <p><strong>住所:</strong> {{ address }}</p>
     <p><strong>電話番号:</strong> {{ phone }}</p>
-
+    <p><strong>Eメール:</strong> {{ email }}</p>
+    <br>
     <form action="/complete" method="POST">
         <button type="submit">注文を確定</button>
     </form>
